--- a/.github/workflows/subdomain-check.yml
+++ b/.github/workflows/subdomain-check.yml
@@ -27,12 +27,11 @@ jobs:
         run: |
           python main.py
 
-      - name: Commit updated seen.json
+            - name: Save seen.json to repo
         run: |
-          if [ -f seen.json ]; then
-            git config --global user.email "actions@github.com"
-            git config --global user.name "GitHub Actions"
-            git add seen.json
-            git commit -m "Update seen.json [skip ci]" || echo "No changes"
-            git push
-          fi
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add seen.json
+          git commit -m "Update seen.json" || echo "No changes to commit"
+          git push
+
